[project]
name = "prompt-refiner"
version = "0.1.0"
description = "AI-powered prompt refinement system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.0.11",
    "fastapi>=0.117.1",
    "google-genai>=1.39.1",
    "regex>=2025.9.18",
    "ruff>=0.13.2",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
    "watchdog>=6.0.0",
    "yfinance>=0.2.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
